--- a/src/App.css
+++ b/src/App.css
@@ -15,18 +15,30 @@ body {
   justify-content: center;
 }
 .key {
+  margin: 0;
+  padding: 0;
   height: 400px;
   width: 80px;
   background-color: azure;
   border: 1px solid black;
-
+  font-size: 3rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  user-select: none;
 }
 
 .black {
   height: 250px;
   width: 60px;
+  color: white;
   background-color: black;
   margin-left: -30px;
   margin-right: -30px;
   z-index: 2;
+}
+
+.hotkey {
+  position: absolute;
+  bottom: 2px;
 }
